fix (eats-33): Update color contrast for buttons

--- a/assets/styles/_place-card.scss
+++ b/assets/styles/_place-card.scss
@@ -33,7 +33,7 @@
     font-size: 1.25em;
     color: $color-sparkblue-dark;
     text-decoration: none;
-    background-color: $color-fountain-blue;
+    background-color: $color-seagull-blue;
     box-sizing: border-box;
     padding: 1em;
     bottom: 0;
