--- a/assets/styles/_review.scss
+++ b/assets/styles/_review.scss
@@ -183,7 +183,7 @@
   }
   &__link {
     @include primary-font();
-    background-color: $color-fountain-blue;
+    background-color: $color-seagull-blue;
     color: $color-sparkblue-dark;
     text-decoration: none;
     font-size: 1.25em;
